[project]
name = "DLBCL-subtyping"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.9.*"
# package-dir = {"" = "."}

dependencies = [
    "einops>=0.8.1",
    "fairscale>=0.4.13",
    "gigapath",
    "h5py>=3.13.0",
    "numpy",
    "openslide-python>=1.4.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "taskipy>=1.14.1",
    "timm==0.9.16",
    "torch==2.0.0+cu117",
    "torchvision==0.15.1",
]

[tool.uv.sources]
gigapath = { git = "https://github.com/prov-gigapath/prov-gigapath.git" }
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"



[tool.taskipy.tasks]
main = "python -m dlbcl_subtyping.main"

